--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@ TODO:
 * Rm and filesystem from C++17
 * zip from cmake?
 * implement nice git flow (master, hotfix, etc)
+* switch to int for indices?
+* switch to array of structures for more cache locality
 
 DONE:
 ====
