--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@ TODO:
 * implement nice git flow (master, hotfix, etc)
 * switch to int for indices?
 * switch to array of structures for more cache locality
+* use new mem layout for AddCell in configure and get rid of the UpdateDomain...
 
 DONE:
 ====
