--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ TODO:
 ====
 * Rm and filesystem from C++17
 * zip from cmake?
+* cleanup the runtime stats, checks, and verbosity levels
 * implement nice git flow (master, hotfix, etc)
 * switch to int for indices?
 * switch to array of structures for more cache locality
